@@ -143,6 +143,13 @@ NEARDATA struct permonst mons[] = {
 	SIZ(1, 5, 0, MS_BUZZ, MZ_TINY), MR_POISON, MR_POISON,
 	M1_ANIMAL|M1_FLY|M1_NOHANDS|M1_OVIPAROUS|M1_POIS,
 	M2_HOSTILE|M2_FEMALE|M2_PRINCE, 0, HI_LORD),
+    MON("locust", S_ANT,
+	LVL(9, 12, 0, 0, 0), (G_GENO|G_SGROUP|1),
+	A(ATTK(AT_BITE, AD_PHYS, 1, 8), ATTK(AT_STNG, AD_DISE, 1, 4),
+		NO_ATTK, NO_ATTK, NO_ATTK, NO_ATTK),
+	SIZ(1, 5, 0, MS_BUZZ, MZ_TINY), MR_POISON, MR_POISON,
+	M1_ANIMAL|M1_FLY|M1_NOHANDS|M1_OVIPAROUS|M1_POIS,
+	M2_HOSTILE, 0, CLR_GRAY),
 /*
  * blobs
  */
