@@ -147,6 +147,25 @@ P = (108, 145, 182)
   MMMMMAAAAAAMMMMM
   MMMMMMMMMMMMMMMM
 }
+# tile 5.1 (locust)
+{
+  MMMMMMMMMMMMMMMM
+  MPPPMMMMMPPMMMMM
+  PPPPPMMMPPPPMMMM
+  PPPPPMMPPBPPMMMM
+  PBPPPMMPBPPPMMMM
+  MPPBPMPPLPLLMMMM
+  MMMPPMPLLALHAHMM
+  MMMAKKKLAHAAHHMM
+  BBJJJJJJJAHHAAHM
+  ABJBBJJJJAHAHHHM
+  MJJABJAJMJHHHAAM
+  MMMJMMMJMJAAAHHM
+  MMJJMMJJMJMHHAHM
+  MMJAAAJAAJMMHHMM
+  MMMMMAAAAAAMMMMM
+  MMMMMMMMMMMMMMMM
+}
 # tile 6 (acid blob)
 {
   MMMMMMMMMMMMMMMM
